// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// dbml
generator dbml {
  provider = "prisma-dbml-generator"
}

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlite"
  url      = "file:./dev.db"
}

model Users {
  id             Int              @id @default(autoincrement())
  avatar         String
  fullname       String
  age            Int
  dateofborn     String
  email          String
  username       String
  password       String
  createdAt      String
  Posts          Posts[]
  Comments       Comments[]
  Comments_likes Comments_likes[]
  Posts_likes    Posts_likes[]
}

model Posts {
  id          Int           @id @default(autoincrement())
  description String
  users       Users         @relation(fields: [userId], references: [id])
  userId      Int
  createdAt   String
  Comments    Comments[]
  Posts_likes Posts_likes[]
}

model Comments {
  id             Int              @id @default(autoincrement())
  comment        String
  posts          Posts            @relation(fields: [postId], references: [id])
  postId         Int
  users          Users            @relation(fields: [userId], references: [id])
  userId         Int
  createdAt      String
  Comments_likes Comments_likes[]
}

model Comments_likes {
  id        Int      @id @default(autoincrement())
  likes     Boolean
  comments  Comments @relation(fields: [commentId], references: [id])
  commentId Int
  users     Users    @relation(fields: [userId], references: [id])
  userId    Int
  createdAt String
}

model Posts_likes {
  id        Int     @id @default(autoincrement())
  likes     Boolean
  posts     Posts   @relation(fields: [postId], references: [id])
  postId    Int
  users     Users   @relation(fields: [userId], references: [id])
  userId    Int
  createdAt String
}
